# yttg

./: .env.example  .gitignore  Cargo.toml  README.md
src/: admin.rs  config.rs  db.rs  main.rs  misc.rs  strings.rs  ytdlp.rs
