[package]
name = "yttg"
version = "0.2.0-dev"
edition = "2024"

[dependencies]
yt-dlp = { version = "1.3", default-features = false }
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
url = "2.5.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
